syntax = "proto3";

package cc.cc;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cc/cc/params.proto";
import "cc/cc/exchange.proto";

option go_package = "CC/x/cc/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/CC/cc/params";
  
  }
  
  // Queries a list of ShowExchange items.
  rpc ShowExchange (QueryShowExchangeRequest) returns (QueryShowExchangeResponse) {
    option (google.api.http).get = "/CC/cc/show_exchange/{id}";
  
  }
  
  // Queries a list of ListExchange items.
  rpc ListExchange (QueryListExchangeRequest) returns (QueryListExchangeResponse) {
    option (google.api.http).get = "/CC/cc/list_exchange";
  
  }
  
  // Queries a list of ListSenderExchange items.
  rpc ListSenderExchange (QueryListSenderExchangeRequest) returns (QueryListSenderExchangeResponse) {
    option (google.api.http).get = "/CC/cc/list_sender_exchange/{sender}";
  
  }
  
  // Queries a list of ListDateExchange items.
  rpc ListDateExchange (QueryListDateExchangeRequest) returns (QueryListDateExchangeResponse) {
    option (google.api.http).get = "/CC/cc/list_date_exchange/{date}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryShowExchangeRequest {
  uint64 id = 1;
}

message QueryShowExchangeResponse {
  Exchange exchange = 1 [(gogoproto.nullable) = false];
}

message QueryListExchangeRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryListExchangeResponse {
  repeated Exchange                               exchange   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryListSenderExchangeRequest {
  string                                sender     = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryListSenderExchangeResponse {
  repeated Exchange                               exchange   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryListDateExchangeRequest {
  string                                date       = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryListDateExchangeResponse {
  repeated Exchange                               exchange   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

